# WA_to_Email

./: README.md  pyproject.toml
server/: README.md  __init__.py  __main__.py  app.py
server/messaging_module/src/messaging_module/: __main__.py
